--- a/SingleSessionApp/Views/_ViewImports.cshtml
+++ b/SingleSessionApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SingleSessionApp
 @using SingleSessionApp.Models
+@using SingleSession.ModelLayer.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
